[package]
name = "recless"
version = "0.1.2"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
license = "MIT/Apache-2.0"

repository = "https://github.com/SuperFluffy/rust-recless"

description = "A Rust implementation of the recursive least squares algorithm with exponential forgetting"
categories = ["algorithms", "science"]
keywords = ["filters", "learning", "regression", "data", "kalman"]


[lib]
name = "recless"

[dependencies]
ndarray = "0.9"

[dependencies.serde]
version = "0.9"
optional = true

[dependencies.serde_derive]
version = "0.9"
optional = true

[features]
blas = ["ndarray/blas"]
serde_support = ["serde", "serde_derive", "ndarray/serde"]
