[package]
name = "recless"
version = "0.1.3"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
license = "MIT/Apache-2.0"

repository = "https://github.com/SuperFluffy/rust-recless"

description = "A Rust implementation of the recursive least squares algorithm with exponential forgetting"
categories = ["algorithms", "science"]
keywords = ["filters", "learning", "regression", "data", "kalman"]


[lib]
name = "recless"

[dependencies]
blas = "0.15"

[dependencies.ndarray]
version = "0.9"
features = ["blas"]

[dependencies.serde]
version = "0.9"
optional = true

[dependencies.serde_derive]
version = "0.9"
optional = true

[features]
serde_support = ["serde", "serde_derive", "ndarray/serde"]
